Premier jet du systeme de combat

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,3 +1,5 @@
-<p>
-  game works!
-</p>
+<div class="container-fluid d-flex justify-content-center background">
+<button onclick="sleepExample()">Fight</button>
+</div>
+
+
