function de combat

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid d-flex justify-content-center background">
-<button onclick="sleepExample()">Fight</button>
+<button (click)="fight()">Fight</button>
 </div>
 
 
