--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -1,3 +1,10 @@
-<p>
-  play works!
-</p>
+
+  
+
+<h1 class="titre offset-5 col-6">EggFighters</h1>
+
+<div class="blanc"></div>
+
+  <button class="allbutton offset-5 col-6" [routerLink]="['/forms']"><span>PLAY</span></button>
+
+
