--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,2 @@
-<<<<<<< HEAD
-=======
-<<<<<<< Updated upstream
 <app-game></app-game>
-=======
->>>>>>> Stashed changes
-
-<app-play></app-play>
->>>>>>> fddb80685a565bef2b785d2dc821cc28ead0f558
-<router-outlet></router-outlet>
-<app-forms></app-forms>
+<p>sauce</p>
