play and forms finish

--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -1,10 +1,14 @@
 
   
+<section class="offset-2 col-8">
 
-<h1 class="titre offset-5 col-6">EggFighters</h1>
+<a href="http://www.thismanslife.co.uk" target="_blank">EggFighters</a>
+
+<div class="blanc"></div>
 
 <div class="blanc"></div>
 
   <button class="allbutton offset-5 col-6" [routerLink]="['/forms']"><span>PLAY</span></button>
 
 
+</section>
