--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -1,16 +1,34 @@
-<div class="title">EGG-FIGHTER</div> 
-<form (ngSubmit)="onSubmit()" #myForm="ngForm">
-  <div>
-    <label for="name-formulaire">Name</label>
-    <input name="name-formulaire" [(ngModel)]="model.name" type="text" required minlength="4" maxlength="15" #name="ngModel">
-  </div>
-  <div *ngIf="myForm.submitted">
-    <div *ngIf="name.errors">
-      <span *ngIf="name.errors.required">Your name must contain at least 4 characters </span>
-      <span *ngIf="name.errors.maxlength">Your name must not be longer than 15 characters</span>
-    </div>
-  </div>
-  <button [routerLink]="['/gamepage']" type="submit">Enter</button>
-  <button type="reset">Refresh</button>
-</form>
+<section class="offset-2 col-8">
 
+
+  <form class=" subscribe container-fluid" (ngSubmit)="onSubmit()" #myForm="ngForm">
+    <div class="row">
+
+
+      <div class="formulaire container-fluid">
+        <div class="blanc"></div>
+        <div class="cadre offset-4">
+          <div class="pseudonyme  ">
+            <div class=" ">
+              <label class="titre   " for="name-formulaire">Choose your Name</label>
+              <input class="offset-1 col-7" name="name-formulaire" [(ngModel)]="model.name" type="text" required
+                minlength="4" maxlength="15" #name="ngModel">
+            </div>
+
+
+          </div>
+
+
+          <div class="blanc1"></div>
+
+
+
+          <button class=" offset-2 col-12 allbutton" [routerLink]="['/gamepage']" type="submit"> <span> Let's
+              Go</span></button>
+
+        </div>
+      </div>
+    </div>
+  </form>
+
+</section>
