--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -1,16 +1,24 @@
-<div class="title">EGG-FIGHTER</div> 
-<form (ngSubmit)="onSubmit()" #myForm="ngForm">
-  <div>
-    <label for="name-formulaire">Name</label>
-    <input name="name-formulaire" [(ngModel)]="model.name" type="text" required minlength="4" maxlength="15" #name="ngModel">
-  </div>
-  <div *ngIf="myForm.submitted">
-    <div *ngIf="name.errors">
-      <span *ngIf="name.errors.required">Your name must contain at least 4 characters </span>
-      <span *ngIf="name.errors.maxlength">Your name must not be longer than 15 characters</span>
-    </div>
-  </div>
-  <button [routerLink]="['/gamepage']" type="submit">Enter</button>
-  <button type="reset">Refresh</button>
-</form>
+<section>
+  <div class="title offset-5 col-6">EGG-FIGHTER</div>
 
+  <form class="container-fluid" (ngSubmit)="onSubmit()" #myForm="ngForm">
+    <div class="row">
+      <div class="formulaire col-12">
+        <div>
+          <label for="name-formulaire">Name</label>
+          <input name="name-formulaire" [(ngModel)]="model.name" type="text" required minlength="4" maxlength="15"
+            #name="ngModel">
+        </div>
+
+        <div *ngIf="myForm.submitted">
+          <div *ngIf="name.errors">
+            <span *ngIf="name.errors.required">Your name must contain at least 4 characters </span>
+            <span *ngIf="name.errors.maxlength">Your name must not be longer than 15 characters</span>
+          </div>
+        </div>
+      </div>
+    </div>
+      <button class="button1 offset-5 col-6" [routerLink]="['/gamepage']" type="submit"><span>Enter</span></button>
+      <button class="button2 offset-5 col-6" type="reset"><span>Refresh</span></button>
+  </form>
+</section>
