Inventory and status functionalities implemented

--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -23,7 +23,7 @@
 
 
 
-          <button class=" offset-2 col-12 allbutton" [routerLink]="['/gamepage']" type="submit"> <span> Let's
+          <button class=" offset-2 col-12 allbutton" [routerLink]="['/game']" type="submit"> <span> Let's
               Go</span></button>
 
         </div>
