Update routing for HTTPS and update docker-compose for traefik

--- a/src/app/forms/forms.component.css
+++ b/src/app/forms/forms.component.css
@@ -1,5 +1,5 @@
 section{
-    background-image: url(/../assets/moai.png);
+    background-image: url(../../assets/moai.png);
     background-repeat:no-repeat;
     height: 100vh;
 }
