--- a/src/app/forms/forms.component.html
+++ b/src/app/forms/forms.component.html
@@ -18,14 +18,14 @@
 
           <div class="blanc1"></div>
           <div *ngIf="model.name=='Nicolas'" class="col-12">
-            <img class="easter" src="assets/nico.png" alt="">
+            <img class="easter" src="./assets/nico.png" alt="">
             <ul class="eastertxt">
               <li>On dit de lui qu'il maitrise moultes library</li>
               <li>Quand il declare un tableau, celui ci est infini, car Nico n'a pas de limite</li>
             </ul>
           </div>
           <div *ngIf="model.name=='BX'"  class="col-12">
-              <img class="easter col-6" src="assets/BX.png" alt="">
+              <img class="easter col-6" src="./assets/BX.png" alt="">
               <img class="easter col-6" src="https://upload.wikimedia.org/wikipedia/commons/3/31/Webysther_20160423_-_Elephpant.svg" alt="">
               <ul class="eastertxt">
                 <li>Il fut temoin d'une apparition du elePHPant</li>
@@ -33,14 +33,14 @@
               </ul>
             </div>
           <div *ngIf="model.name=='Maxime'"  class="col-12">
-              <img class="easter" src="assets/Maxime.png" alt="">
+              <img class="easter" src="./assets/Maxime.png" alt="">
               <ul class="eastertxt">
                 <li>Il vous observe</li>
                 <li>Il sait où vous habitez</li>
               </ul>
           </div>
           <div *ngIf="model.name=='Haitam'"  class="col-12">
-              <img class="easter" src="assets/haitam.png" alt="">
+              <img class="easter" src="./assets/haitam.png" alt="">
               <ul class="eastertxt">
                 <li>Stagiaire.</li>
                 <li>Fait moultes trucs de stagiaire.</li>
