--- a/src/app/play/play.component.css
+++ b/src/app/play/play.component.css
@@ -50,7 +50,7 @@
 }
 
 section{
-  background-image: url(http://www.amrasanarion.com/Images/jeux-video/Elvenar/Journal/El%C3%A9ments%20du%20squelette%20graphique/background.jpg) ;
+  background-image: url(https://www.amrasanarion.com/Images/jeux-video/Elvenar/Journal/El%C3%A9ments%20du%20squelette%20graphique/background.jpg) ;
   background-repeat:no-repeat;
   height: 100vh;
   
